--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -61,6 +61,11 @@ body {
   }
 }
 
+.no-tbp {
+  padding-bottom: 100px;
+  padding-top: 0px;
+}
+
 /* Navigation Bar */
 
 .navigation-bar {
@@ -92,6 +97,7 @@ body {
 /* Section 1 */
 
 .section-1 {
+  min-height: 60vh;
   height: 100%;
   margin-bottom: 15vh;
   display: flex;
@@ -101,7 +107,7 @@ body {
 }
 
 .section-wrapper {
-  padding-top: 12vh;
+  padding-top: 15vh;
   flex: 1;
   overflow: hidden;
 }
@@ -242,26 +248,83 @@ p.body {
 /* Section 2 */
 .section-2 {
   background-color: rgb(36, 36, 36);
-  height: min-content;
+  min-height: 100vh;
+}
+
+.light-bar {
+  position: absolute;
+  right: 35%;
+  left: 35%;
+  width: 25%;
+  height: 20px;
+  margin: auto;
+  background-color: rgb(255, 255, 234);
+  border-radius: 20px;
+  margin-top: 3vh;
+}
+
+.fly {
+  max-height: 25px;
+  max-width: 25px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+@keyframes fly-animation {
+  0% {
+    transform: translateX(0);
+    transform: translateY(0);
+  }
 }
 
 .project-flex {
-  padding-top: 5rem;
+  padding-top: 5vh;
   position: relative;
   display: flex;
   flex: 1;
   flex-wrap: nowrap;
   flex-direction: row;
-  grid-column-gap: 15vw;
-  row-gap: 2rem;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-content: space-between;
 }
 
 .project-frame {
   display: flex;
-  width: 300px;
-  height: 350px;
+  width: calc(200px + 10vw);
+  height: calc(400px + 20vh);
   background-color: rgb(255, 255, 255);
   position: relative;
+  border: 3px solid black;
   box-shadow: 5px 10px 1px 5px;
+  transition-duration: 200ms;
+}
+
+.project-frame:hover {
+  transform: scale(1.05, 1.05);
+  transition-duration: 200ms;
+  box-shadow: -5px 15px 1px 5px;
+}
+
+.frame-format {
+  width: 100%;
+  margin: 10px auto;
+  display: block;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.frame-img {
+  display: flex;
+  /* margin: 10px auto; */
+  background-color: black;
+  width: 100%;
+  height: 75%;
+}
+
+.frame-caption {
+  align-items: stretch;
+  overflow: hidden;
+  font-weight: 500;
+  font-size: 200%;
 }
