--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -427,7 +427,6 @@ body {
   display: block;
   width: 100%;
   font-size: min(3rem, 1.5vw);
-  width: ;
   color: white;
   font-weight: 600;
 }
@@ -496,8 +495,8 @@ body {
 .caption-items {
   text-decoration: none;
   color: white;
-  padding-right: 5px;
-  padding-left: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
   background-image: linear-gradient(rgb(255, 137, 46) 0 0);
   background-position: 0 100%; /*OR bottom left*/
   background-size: 0% 3px;
@@ -507,5 +506,5 @@ body {
 
 .caption-items:hover {
   background-position: 100% 100%; /*OR bottom right*/
-  background-size: 100% 6px;
+  background-size: 100% 3px;
 }
