--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -78,7 +78,7 @@ body {
   color: white;
 }
 
-.section-divider {
+.section-divider-h {
   display: block;
   height: 0px;
   width: 70%;
@@ -86,6 +86,16 @@ body {
   border-radius: 20px;
   margin: 0 auto;
   margin-top: 25vh;
+}
+
+.section-divider-v {
+  display: block;
+  height: 100%;
+  min-height: 600px;
+  width: 0px;
+  border: rgb(255, 137, 46) 5px solid;
+  border-radius: 20px;
+  margin: auto 20px;
 }
 
 .material-symbols-outlined {
@@ -171,15 +181,15 @@ body {
 .section-wrapper {
   padding-top: 15vh;
   flex: 1;
-  overflow-x: visible;
-  overflow-y: hidden;
   position: relative;
   width: min(70vw, 100%);
+  /* mobille - z-index 1 */
 }
 
 .section-image-wrapper {
   padding-top: 20vh;
   position: relative;
+  /*  mobile position absolute */
 }
 
 #blob {
@@ -199,7 +209,7 @@ body {
 
 .title {
   font-weight: 800;
-  font-size: min(5rem, 3vw);
+  font-size: min(5rem, 4vw);
   width: min-content;
   white-space: nowrap;
   line-height: 0px;
@@ -231,6 +241,7 @@ body {
   padding-left: 10px;
   margin: 0px;
   margin-right: 30vh;
+  /* mobile margin right 0 */
   transform: translateX(-101%);
   word-spacing: +5px;
 
@@ -250,6 +261,7 @@ body {
   height: 0vh;
   margin-top: 5vh;
   align-items: center;
+  overflow: hidden;
   /* animation: border-appear, border-disappear;
   animation-duration: 1500ms, 1500ms;
   animation-iteration-count: 1;
@@ -384,7 +396,7 @@ body {
 }
 
 .project-wrapper {
-  padding-top: 10vh;
+  padding-top: 0vh;
   position: relative;
   width: 100%;
   display: flex;
@@ -397,7 +409,6 @@ body {
   flex-wrap: nowrap;
   flex-direction: column;
   justify-items: center;
-  padding-top: 5vh;
   padding-bottom: 5vh;
   width: 100%;
 }
@@ -412,6 +423,7 @@ body {
   transition-duration: 500ms;
   transition-timing-function: ease-in;
   color: rgb(255, 255, 255);
+  font-family: "Monoton", sans-serif;
 }
 
 .project-subheader {
@@ -504,7 +516,7 @@ body {
   align-items: center;
   color: white;
   font-weight: 600;
-  font-size: min(4rem, 4vw);
+  font-size: min(3rem, 4vw);
 }
 
 .preview:hover {
@@ -528,7 +540,7 @@ body {
   align-items: center;
   color: white;
   font-weight: 600;
-  font-size: min(4rem, 4vw);
+  font-size: min(3rem, 4vw);
 }
 
 .preview-left:hover {
@@ -588,12 +600,92 @@ body {
 
 .about-wrapper .title {
   width: 100%;
+  margin-bottom: 10vh;
+}
+.about-flex {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
 }
 
 .about-text {
-  margin-top: 10vh;
+  margin: auto 0;
   font-weight: 500;
   font-size: min(3vh, 6vh);
   color: white;
   line-height: 5vh;
+  text-align: center;
+  text-align-last: center;
+  width: 75%;
+}
+
+.stack-references {
+  width: 45%;
+  display: flex;
+  flex-wrap: nowrap;
+  display: block;
+  text-align: left;
+}
+
+.stack-references .title {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  height: min-content;
+  width: min-content;
+  text-align: left;
+  text-decoration: underline rgb(255, 137, 46);
+  line-height: 150%;
+  font-size: min(3rem, 4vw);
+}
+
+.stack-references .stack-img {
+  gap: 2rem;
+}
+
+.stack-img {
+  padding: 10px 10px;
+  transition-duration: 300ms;
+}
+
+.stack-img:hover {
+  transform: scale(1.05) translateY(-7px);
+  transition-duration: 400ms;
+  transition-timing-function: ease-out;
+}
+
+/* Section 4 */
+.section-4 {
+  margin-top: 10vh;
+  margin-bottom: 3vh;
+  display: flex;
+}
+
+.contact-wrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+}
+
+.contact-wrapper .title {
+  writing-mode: sideways-lr;
+  text-align: center;
+  font-size: min(7rem, 6vw);
+  font-weight: 800;
+}
+
+.orange-button {
+  background-color: rgb(255, 137, 46);
+  width: calc(500px + 15vw);
+  height: calc(500px + 15vw);
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto auto;
+  transition-duration: 400ms;
+}
+
+.orange-button:active {
+  background-color: rgb(255, 255, 255);
+  transition-duration: 200ms;
 }
