--- a/JS/JS Practice/style.css
+++ b/JS/JS Practice/style.css
@@ -31,9 +31,10 @@ body::-webkit-scrollbar {
 }
 
 @keyframes loading {
-    0%, 100% {
-        opacity: 100%;
-    }
+  0%,
+  100% {
+    opacity: 100%;
+  }
   0%,
   100% {
     opacity: 100%;
