--- a/Client_MIndless/style.css
+++ b/Client_MIndless/style.css
@@ -86,7 +86,7 @@ body {
   display: flex;
   position: relative;
   width: 100%;
-  height: 95vh;
+  height: 100vh;
   align-content: center;
   overflow: scroll;
   -ms-overflow-style: none; /* IE and Edge */
@@ -103,37 +103,63 @@ body {
 }
 
 .content-right {
-  writing-mode: horizontal-tb;
   text-align: right;
+  justify-content: right;
+  padding-left: 15%;
 }
 
 .title {
-  font-size: 150px;
+  font-size: 130px;
   color: rgb(93, 255, 6);
-  word-break: break-all;
+  word-break: none;
+  white-space: nowrap;
 }
 
 .content-right .sub-title {
-  justify-content: flex-end;
+  justify-content: right;
+  width: 100%;
+  text-align: right;
 }
 
 .sub-title {
   display: flex;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 400;
   font-weight: 400;
   font-family: "Passion One", sans-serif;
   width: 85%;
 }
 
+.content-right .button {
+  justify-content: right;
+  display: flex;
+}
+
+.button {
+  display: flex;
+  margin-top: 50px;
+  column-gap: 10px;
+}
+
 .contact-button {
   display: flex;
-  font-size: 40px;
+  font-size: 35px;
   padding: 1px 20px;
   font-family: "Passion One", sans-serif;
   background-color: rgb(93, 255, 6);
   border: none;
   transition-duration: 300ms;
+}
+
+.token {
+  display: flex;
+  font-size: 35px;
+  padding: 1px 20px;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  transition-duration: 300ms;
+  color: black;
+  font-family: "Passion One", sans-serif;
 }
 
 .contact-button:hover {
@@ -145,12 +171,6 @@ body {
 .contact-link {
   color: black;
   text-decoration: none;
-}
-
-.button {
-  display: block;
-  margin-top: 50px;
-  justify-content: center;
 }
 
 /* DIVIDERS
@@ -208,37 +228,21 @@ body {
 }
 
 .project-border {
-  border: rgb(24, 24, 24) solid 10px;
+  padding: 10px 10px;
   border-radius: 25px;
   transition-duration: 250ms;
   /* padding: 5px 5px; */
   z-index: 10;
 }
 
-.project-border:focus,
-.project-border:active .project-border {
-  animation: focus-border 300ms linear;
-  animation-fill-mode: forwards;
-  border-radius: 25px;
-}
-
 .project-wrapper {
   display: flex;
   height: auto;
   width: 100%;
-  background-color: rgb(0, 0, 0);
   flex-shrink: 0;
   border-radius: 20px;
   overflow: scroll;
   aspect-ratio: 16/9;
-}
-
-.embed {
-  pointer-events: none;
-}
-
-.project-border:focus .embed {
-  pointer-events: all;
 }
 
 @keyframes focus-border {
@@ -266,7 +270,7 @@ body {
 .works-caption {
   position: relative;
   display: flex;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 300;
   padding-left: 10px;
 }
@@ -304,5 +308,20 @@ body {
   100% {
     visibility: visible;
     height: inherit;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  /* SECTION 1 */
+  /*  .section-1 {
+   } */
+
+  .title {
+    word-break: break-all;
+    white-space: wrap;
+  }
+
+  .section-2 {
+    visibility: collapse;
   }
 }
