--- a/Client_MIndless/style.css
+++ b/Client_MIndless/style.css
@@ -274,6 +274,13 @@ body {
   align-content: center;
 }
 
+.technology-stack {
+  width: 100%;
+  height: 20vh;
+  background-color: rgba(255, 255, 255, 0.13);
+  border-radius: 50px;
+}
+
 /* SECTION 2 */
 .section-2 {
   background-color: rgb(24, 24, 24);
