--- a/Client_MIndless/style.css
+++ b/Client_MIndless/style.css
@@ -46,6 +46,19 @@ body {
   /* word-break:break-all; USE THIS FOR MOBILE TITLE */
 }
 
+.mobile-break {
+  display: none;
+}
+
+.mobile {
+  visibility: hidden;
+  display: none;
+}
+
+.item-focus:active {
+  color: rgb(93, 255, 6);
+}
+
 /* SECTION 1 NAVIGATION BAR*/
 
 .navigation-container {
@@ -58,7 +71,6 @@ body {
   padding: 0.5% 3%;
   z-index: 2;
   background-color: rgba(20, 20, 20, 0.887);
-  border-radius: 50px;
 }
 
 .nav-item {
@@ -141,7 +153,7 @@ body {
   background-color: rgb(20, 20, 20);
   display: flex;
   position: relative;
-  width: 100%;
+  width: 80%;
   height: 100vh;
   align-content: center;
   overflow: scroll;
@@ -155,24 +167,44 @@ body {
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   position: relative;
-  padding-top: 27.5vh;
+  padding-top: 5%;
+  padding-bottom: 2%;
   font-family: "Passion One", sans-serif;
   font-weight: 900;
+}
+
+.content-header {
+  margin-top: 200px;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.content-container content:first-of-type {
+  padding-top: 25vh;
+  margin-top: 25vh;
 }
 
 .content-right {
   text-align: right;
   justify-content: right;
-  padding-left: 15%;
+  padding: 0px auto;
 }
 
 .title {
   font-size: 130px;
   color: rgb(93, 255, 6);
-  word-break: normal;
-  white-space: nowrap;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.content-right .title {
+  justify-content: right;
+  width: 100%;
+  text-align: right;
 }
 
 .content-right .sub-title {
@@ -187,7 +219,7 @@ body {
   font-weight: 400;
   font-weight: 400;
   font-family: "Passion One", sans-serif;
-  width: 85%;
+  width: 100%;
 }
 
 .content-right .button {
@@ -212,7 +244,7 @@ body {
   border-radius: 25px;
 }
 
-.token {
+.button-token {
   display: flex;
   font-size: 35px;
   padding: 1px 20px;
@@ -235,35 +267,37 @@ body {
   text-decoration: none;
 }
 
-.technology {
-  width: 1005;
+.content-container {
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex: 1;
   position: relative;
 }
 
-.technology .content {
+.content-container .content {
   overflow: hidden;
   flex-wrap: wrap;
   position: relative;
-  width: 80%;
-}
-
-.technology .title {
-  word-break: break-all;
+  width: 100%;
+  padding-top: 5%;
 }
 
 .tech-stack-arrow {
+  display: flex;
   width: 20%;
-  padding-top: 27.5%;
+  align-items: center;
+  padding-top: 20%;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .right-arrow {
   display: flex;
-  width: 100;
+  width: 100%;
   font-size: 100px;
   align-content: center;
+  padding: auto 100px;
 }
 
 .technology-stack-container {
@@ -273,7 +307,6 @@ body {
   background-color: rgba(255, 255, 255, 0.067);
   border-radius: 50px;
   display: flex;
-  flex: 1;
   flex-direction: column;
 }
 
@@ -294,29 +327,51 @@ body {
 .tech-stack-wrapper {
   display: flex;
   flex: 1;
-  width: 100%;
   padding: 30px 0;
 }
 
 .tech-stack {
   display: grid;
-  grid-template-columns: 33% 33% 33%;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 50px 20px;
   padding: 0 50px;
-  width: auto;
+  width: 49%;
+  justify-content: center;
+  align-content: start;
 }
 
 .stack-item {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex-direction: column;
   text-align: center;
   font-size: 30px;
   font-weight: 400;
   aspect-ratio: 1/1;
   color: black;
+}
+
+.stack-image {
+  position: relative;
+  display: flex;
+  margin: auto auto;
+  width: 70%;
+  height: 70%;
+  border-radius: 40px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
   background-color: rgb(93, 255, 6);
-  justify-content: flex-end;
+  font-size: 90px;
+  color: white;
+}
+
+.stack-item-text {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  margin-top: auto;
+  color: white;
 }
 
 /* DIVIDERS */
@@ -337,7 +392,7 @@ body {
   background-color: rgb(24, 24, 24);
   display: flex;
   position: relative;
-  width: 25%;
+  width: 20%;
   min-width: min-content;
   flex-direction: column;
   row-gap: 20px;
@@ -474,16 +529,130 @@ body {
 }
 
 @media only screen and (max-width: 1280px) {
-  /* SECTION 1 */
-  /*  .section-1 {
-   } */
+  .mobile-break {
+    display: flex;
+  }
 
-  .title {
-    word-break: break-all;
-    white-space: wrap;
+  .mobile {
+    visibility: visible;
+    display: flex;
+  }
+
+  .mobile .nav-item {
+    display: flex;
+    align-items: center;
+  }
+
+  /* NAVIGATION */
+  .navigation-container {
+    padding: 2% 5%;
+    border-radius: 0px;
+  }
+
+  .nav-item {
+    display: none;
+  }
+
+  .item-focus:active .section-2 {
+    visibility: visible;
+    display: flex;
+    position: absolute;
+    left: 0px;
+    top: px;
+  }
+
+  .search-bar:focus {
+    max-width: 275px;
+  }
+
+  .content {
+    padding: 10vh auto;
+  }
+
+  /* SECTION 1 */
+  .section-1 {
+    width: 100%;
   }
 
   .section-2 {
     visibility: collapse;
+    display: none;
+  }
+
+  .title {
+    font-size: clamp(2rem, 8vh, 6rem);
+    width: 100%;
+    word-break: normal;
+  }
+
+  .content-right .title {
+    text-align: right;
+    display: flex;
+    justify-content: right;
+    width: 100%;
+  }
+
+  .sub-title {
+    font-size: clamp(1rem, 3vh, 3rem);
+  }
+
+  .button {
+    flex-wrap: wrap;
+    flex-direction: row;
+    row-gap: 1rem;
+  }
+
+  .contact-button {
+    font-size: clamp(1rem, 3vh, 3rem);
+  }
+
+  .token {
+    font-size: clamp(1rem, 3vh, 3rem);
+  }
+
+  .tech-stack-arrow {
+    display: none;
+  }
+
+  .tech-stack-wrapper {
+    flex-direction: column;
+  }
+
+  .tech-stack {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    padding: 0px 0px;
+    flex: 1;
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .tech-stack-title {
+    font-size: clamp(1rem, 5vh, 4rem);
+  }
+
+  .stack-item {
+    width: 25%;
+    max-width: 125px;
+    padding: 0px 0px;
+  }
+
+  .stack-image {
+    width: 100%;
+    height: 100%;
+  }
+
+  .stack-item-text {
+    font-size: clamp(1rem, 3vh, 3rem);
+  }
+
+  .divider {
+    height: 1%;
+    max-height: 7px;
+    width: auto;
+    max-width: none;
+    margin: 30px 0px;
+    padding: 4px 0px;
   }
 }
