--- a/2024/The Javascript/style.css
+++ b/2024/The Javascript/style.css
@@ -4,30 +4,35 @@ body {
 }
 
 html {
-  background-color: rgb(227, 198, 170);
-  overflow: hidden;
-  font-family: "Boska", serif;
+  background-color: rgb(255, 147, 188);
+  /* overflow: hidden; */
+  font-family: "Switzer", sans-serif;
 }
 
-.web-format {
+/* overflow-y: auto;
+scroll-snap-type: y mandatory;
+-ms-overflow-style: none;
+scrollbar-width: none; */
+
+.landing-page {
   display: flex;
-  aspect-ratio: 16/9;
+  flex-direction: column;
+}
+
+.menu-wrapper {
+  position: relative;
+  display: flex;
   height: auto;
-  width: 100%;
-  max-height: 100vh;
+  margin: auto auto;
+  width: 1250px;
+  height: 900px;
 }
 
 .menu-container {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin: auto 0;
-  width: auto;
-  height: 7rem;
-  overflow-y: auto;
-  scroll-snap-type: y mandatory;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  margin: auto auto;
 }
 
 .menu-container::-webkit-scrollbar {
@@ -35,19 +40,52 @@ html {
 }
 
 .menu-option {
-  word-break: keep-all;
-  color: rgb(0, 0, 0);
+  position: relative;
+  display: flex;
   padding: 0 20px;
   margin: 0px 0px;
-  font-size: 5rem;
-  line-height: 7rem;
-  scroll-snap-align: center;
-  font-weight: 500;
   cursor: pointer;
   user-select: none;
+  white-space: nowrap;
+  font-size: 7rem;
+  font-weight: 900;
+  line-height: 5.5rem;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  scroll-snap-align: center;
+  transition-duration: 100ms;
+  justify-content: center;
 }
 
 .menu-option:focus {
-  transition-duration: 2000ms;
-  text-decoration: underline 2px black solid;
+  color: white;
+  transition-duration: 200ms;
 }
+
+.button-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.sd-button {
+  position: relative;
+  display: block;
+  height: 75px;
+  width: 75px;
+  cursor: pointer;
+  margin: auto auto;
+  color: white;
+  background-color: black;
+  border: none;
+  border-radius: 100px;
+}
+
+.sd-button:active {
+  background-color: white;
+}
+
+/* .menu-option:focus {
+  height: 0px;
+  overflow: hidden;
+} */
