--- a/2024/Official Website/style.css
+++ b/2024/Official Website/style.css
@@ -17,7 +17,6 @@ scrollbar-width: none; */
 .landing-page {
   display: flex;
   flex-direction: column;
-  margin-bottom: 75vh;
 }
 
 .choice-page {
@@ -80,7 +79,7 @@ scrollbar-width: none; */
   transition-duration: 200ms;
 }
 
-.menu-option:nth-child(1)[aria-checked="true"] + .menu-option .skunk {
+.menu-option:nth-child(1)[aria-checked="true"] .choice-text {
   display: none;
 }
 
@@ -88,6 +87,14 @@ scrollbar-width: none; */
   position: relative;
   display: flex;
   flex-direction: column;
+}
+
+.button-1 {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  opacity: 0; /* Initially hide the button-wrapper */
+  transition: opacity 0.5s ease-in-out; /* Add transition effect */
 }
 
 .sd-button {
@@ -127,6 +134,7 @@ scrollbar-width: none; */
 .back-button {
   padding-bottom: 10px;
   margin-bottom: 30px;
+  margin-top: 75vh;
 }
 
 .choice-page .menu-wrapper {
@@ -165,7 +173,11 @@ scrollbar-width: none; */
 
 .choice-text {
   font-weight: 900;
-  font-size: 4rem;
+  font-size: 3rem;
   text-align: justify;
   word-break: break-all;
+}
+
+.menu-option:not(focus) .button-wrapper {
+  display: none;
 }
